--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <body class="regular">
     <!-- header section start -->
-     <header class="max-w-screen-xl mx-auto">
+     <header class="max-w-screen-xl mx-auto px-3 lg:px-0">
         <!-- navbar section start -->
      <section>
         <!-- navbart content -->
@@ -73,6 +73,22 @@
          </nav>
      </section>
      <!-- navbar section end -->
+
+     <!-- banner section start -->
+      <section class="bg-cover bg-no-repeat py-14 lg:py-36 mt-8 rounded-xl" style="background-image: url(./images/banner.png);">
+        <div class="flex flex-col items-center space-y-4">
+            <!-- text content -->
+            <h1 class="text-white special text-3xl lg:text-7xl font-extrabold text-center">We Provide Effective <br>Legal Solutions</h1>
+            <p class="text-sm lg:text-base font-normal text-[#E7E7E7] lg:w-2/4 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+            <!-- search content -->
+            <div class="flex items-center gap-5">
+                <input type="text" name="" id="" placeholder="Search your services" class="py-4 px-5 text-xs lg:px-28 lg:py-3 rounded-lg">
+                <button class="btn bg-[#B68C5A] rounded-lg text-white text-lg font-medium">Search</button>
+            </div>
+        </div>
+      </section>
+     <!-- banner section end -->
 
     </header>
     <!-- header section end -->
