--- a/index.html
+++ b/index.html
@@ -166,6 +166,28 @@
          </section>
         <!-- practice section end -->
 
+        <!-- feedback section start -->
+         <section class="max-w-screen-xl mx-auto mt-24 px-3 lg:px-0">
+            <div class="flex flex-col items-center">
+                <h3 class="special text-2xl lg:text-4xl font-bold mb-4">What Our Client Say</h3>
+                <p class="text-center text-gray-500 lg:w-3/5 mb-10">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+
+                <div class="relative">
+                    <div class="flex flex-col items-center absolute text-white top-3 lg:top-36 lg:right-36">
+                        <img src="./images/propic.png" alt="" class="w-8 lg:w-24 bg-gray-200 border-4 border-white rounded-full p-1">
+                        <h5 class="special text-sm lg:text-2xl font-semibold text-center lg:my-1">Shafriki Islam</h5>
+                        <p class="special text-sm mb-1">Front-End Developer</p>
+                        <p class="text-xs text-white lg:w-3/5 text-center">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. </p>
+                    </div>
+                    <i class="fa-solid fa-angle-right absolute text-white lg:right-20 lg:top-72 font-bold top-24 right-1 lg:text-3xl"></i>
+                    <img src="./images/banner.png" alt="" class="rounded-xl">
+                    <i class="fa-solid fa-angle-left absolute text-white lg:left-20 lg:top-72 font-bold lg:text-3xl top-24 left-1"></i>
+                    
+                </div>
+            </div>
+         </section>
+        <!-- feedback section end -->
+
      </main>
     <!-- main section end -->
 
